--- a/rese-nuxtpj/package.json
+++ b/rese-nuxtpj/package.json
@@ -2,12 +2,14 @@
   "name": "rese-nuxtpj",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "yarn": "1.22.15"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "heroku-postbuild": "npm run build"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/auth-next": "^5.0.0-1643365392.dae6516",
