--- a/resepj-api/composer.json
+++ b/resepj-api/composer.json
@@ -11,7 +11,8 @@
         "laravel/fortify": "^1.10",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
